# fastfind

./: .clangd  README.md  install.sh  meson.build
data/: io.github.fastfind.desktop
src/: fileitem.c  fileitem.h  indexer.c  indexer.h  main.c
